<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Cooking times</string>
    <string name="admob_id">123456789</string>
    <string name="action_settings">Settings</string>
    <string name="start">Start</string>
    <string name="paused">Paused</string>
    <string name="select_cooker">Select the configuration matching your stove.\nYou can change this later on in settings</string>
    <string name="title_activity_vegetable">Ingredients</string>
    <string name="title_settings">Settings</string>
    <string name="title_vegetable_list">Ingredients</string>
    <string name="title_vegetable_detail">Details</string>
    <string name="title_zoomed_kookplaat">Details</string>
    <string name="pickfood">Pick food</string>
    <string name="cookingTime">Cooking time: </string>
    <string name="descriptionTitle">Description</string>
    <string name="rate">Rate this app</string>
    <string name="settings">Settings</string>
    <string name="reset">Reset all timers</string>
    <string name="unknown">Unknown</string>
    <string name="delete_from_db">delete from database</string>
    <string name="edit_in_db">edit timer</string>
    <string name="dialog_delete_from_db_title">Delete item?</string>
    <string name="dialog_delete_from_db">This removes this cooking time from the database, are you sure?</string>

    <string name="edit_recipe_activity">Edit timer</string>
    <string name="set_custom_timer">Set custom timer</string>
    <string name="new_recipe_activity">New timer</string>
    <string name="new_recipe">Create new timer</string>
    <string name="hours">hour</string>
    <string name="minutes">min.</string>
    <string name="new_recipe_hint">insert food name</string>
    <string name="new_description_hint">(optional) add a description here</string>
    <string name="store_in_db">save this timer</string>
    <string name="set">set</string>
    <string name="save">save</string>

    <string name="timer">Timer</string>
    <string name="timer_ready">Timer ready!</string>
    <string name="the_alarm_for">The alarm for</string>
    <string name="has_finished">has finished</string>
    <string name="notification_text">Next timer ready in</string>
    <string name="ready_in">ready in</string>
    <string name="banner_ad_unit_id_vegetable_details">ca-app-pub-6550849443292807/2519610971</string>
    <string name="banner_ad_unit_id_kookplaat">ca-app-pub-6550849443292807/8147342173</string>
    <string name="banner_ad_unit_id_vegetable_list">ca-app-pub-6550849443292807/9484474579</string>

    <string name="dialog_close">Close</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_reset_title">Reset all timers?</string>
    <string name="dialog_reset_message">This will also reset all active timers, are you sure?</string>
    <string name="dialog_reset_switch_stove_title">Switch stove</string>
    <string name="dialog_reset_switch_stove_message">This will also reset all running timers, are you sure?</string>
    <string name="dialog_time_not_set_title">Set time</string>
    <string name="dialog_time_not_set">Don\'t forget to set the time!</string>
    <string name="dialog_fill_in_name_title">Pick a name</string>
    <string name="dialog_fill_in_name">Please choose a name</string>
    <string name="dialog_name_in_use_title">Name in use</string>
    <string name="dialog_name_in_use">Please choose a different name</string>
    <string name="dialog_overwrite_title">Overwrite</string>
    <string name="dialog_overwrite">Are you sure you want to overwrite this item?</string>
    <string name="dialog_cannot_edit_title">Oops!</string>
    <string name="dialog_cannot_edit">You can only edit your own custom cooking times</string>
    <string name="dialog_cannot_delete_title">Oops!</string>
    <string name="dialog_cannot_delete">You can only delete your own custom cooking times</string>

    <string name="instructional_understand">Got it</string>
    <string name="instructional_pt1_swipe">Swipe to change stove tops.</string>
    <string name="instructional_pt1">tap on a stove to set up a timer</string>
    <string name="instructional_pt2_timericon">Clicking a timer icon initializes the vegetable\'s cooking time on the last selected stove top.</string>
    <string name="instructional_pt3_unlockwarning">Confirm unlock.\n\nUnlocking the layout will reset all running timers.\nAre you sure?</string>
    <string name="instructional_pt3_cancel">No, cancel.</string>
    <string name="instructional_pt3_continue">Yes, i\'m sure.</string>
    <string name="stop">Yes, remove timer</string>
    <string name="cancel">Cancel</string>
    <string name="stop_timer_title">Delete timer</string>
    <string name="stop_timer_message">Are you sure you want to remove this timer?</string>
    <string name="stop_timer">Are you sure you want to remove this timer?</string>
    <string name="settings_title">Settings</string>
    <string name="settings_stovetops">stove top(s)</string>
    <string name="settings_set">set</string>
</resources>
